# cortx-docs

./: .cursorrules  .env.example  .gitignore  .markdownlintignore  .pre-commit-config.yaml  ACTION_ITEMS_COMPLETE.md  CI_CD_ACTIVATION_RESULTS.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_SETUP_CHECKLIST.md  CODECOV_SETUP_INSTRUCTIONS.md  CODEOWNERS  CONTRIBUTING.md  CORRECT_ARCHITECTURE_AND_MIGRATION.md  FINAL_CORRECT_ARCHITECTURE.md  FINAL_STATUS_SUMMARY.md  GH_ORG_SETUP_PROMPT.md  MIGRATION_GUIDE_TO_CORTX_PLATFORM.md  MIGRATION_PLAN_MODULES.md  Makefile  PLATFORM_PRODUCTION_READY.md  QUALITY_HARDENING_COMPLETE.md  README.md  REPO_INSTRUCTION.md  REPO_STANDARDIZATION_ADAPTATION.md  RUNNING_LOCALLY.md  SECURITY.md  SESSION_SUMMARY_COMPLETE_2025-10-07.md  SESSION_SUMMARY_NAVIGATION_2025-10-07.md  SUPPORT.md  UI_MODERNIZATION_GUIDE.md  bootstrap_sinergy.sh  codecov.yml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  requirements.txt
services/gateway/: .coveragerc  .dockerignore  Dockerfile  README.md  TEST_SUMMARY.md  healthcheck.py  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
services/gateway/app/: dev_main.py  main.py  main_jwt.py  policy_router.py
services/gateway/app/middleware/: auth.py
services/gateway/app/routers/: analytics.py  fedsuite_proxy.py  orchestrator.py  platform_services.py  propverify_proxy.py  services.py
services/gateway/docs/: GATEWAY_FDD.md  README.md
services/gateway/docs/operations/: deployment.md  troubleshooting.md
services/gateway/docs/testing/: test-plan.md
services/gateway/tests/: README.md  __init__.py  conftest.py
services/gateway/tests/__utils__/: __init__.py  factories.py  helpers.py
services/gateway/tests/integration/: __init__.py  test_analytics_api.py  test_fedsuite_proxy.py  test_main_api.py  test_orchestrator_api.py  test_platform_services_proxy.py  test_propverify_proxy.py  test_services_api.py
services/gateway/tests/unit/: __init__.py  test_auth_middleware.py  test_policy_router.py
services/ocr/: .coveragerc  .dockerignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_QUICK_START.md  TEST_IMPLEMENTATION_SUMMARY.md  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
services/ocr/app/: __init__.py  database.py  main.py  models.py  processor.py  schemas.py
services/ocr/docs/: OCR_FDD.md  README.md
services/ocr/docs/operations/: deployment.md  troubleshooting.md
services/ocr/docs/testing/: test-plan.md
services/ocr/tests/: README.md  __init__.py  conftest.py
services/ocr/tests/integration/: __init__.py  test_api.py  test_cache_stats.py
services/ocr/tests/unit/: __init__.py  test_models.py  test_processor.py  test_schemas.py
services/workflow/: Dockerfile  README.md  TESTING_SUMMARY.md  pyproject.toml  requirements-dev.txt
services/workflow/app/: main.py
services/workflow/clients/: cortx.py
services/workflow/cortx_workflow_service.egg-info/: PKG-INFO  SOURCES.txt
services/workflow/docs/: README.md  WORKFLOW_FDD.md
services/workflow/docs/operations/: deployment.md  troubleshooting.md
services/workflow/docs/testing/: test-plan.md
services/workflow/tests/: __init__.py  conftest.py  test_imports.py
services/workflow/tests/integration/: __init__.py  test_approval_api.py  test_designer_api.py  (+2 more)
(+409 files in other folders)
