[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortx-workflow-service"
version = "0.1.0"
description = "CORTX Workflow Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "opentelemetry-sdk==1.26.0",
    "opentelemetry-exporter-otlp==1.26.0",
    "opentelemetry-instrumentation-fastapi==0.47b0",
    "opentelemetry-instrumentation-httpx==0.47b0",
    "cortx_backend",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "httpx==0.27.2",
    "pytest-cov==5.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff==0.5.6",
    "mypy==1.11.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
